[Logos and Content alignment fix]Current Projects section logo needed extra margin for longer text. Fixed BS colums.

--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,9 @@ i.fa.fa-wordpress {
     float: left;	
 }
 
+.nav-tabs {
+    border-bottom: none;
+}
 .copy h1{
 	 margin-top: 70px;
 }
@@ -43,6 +46,17 @@ i.fa.fa-wordpress {
 #profileImg {
 	margin-top: 70px;
 	border-radius: 100px;
+}
+
+#projectsImg{
+	margin: 21% auto 0 auto;
+}
+
+@media all and (max-width: 768px) { 
+	#projectsImg{
+		margin: 0 auto;
+	}
+
 }
 
 /* Portrait */
